--- a/os/macos/Brewfile
+++ b/os/macos/Brewfile
@@ -49,6 +49,7 @@ cask "alfred"
 cask "amazon-workspaces"
 cask "android-studio"
 cask "aws-vault"
+cask "cyberduck"
 cask "dash"
 cask "dbeaver-community"
 cask "discord"
