fork, alternative to sourcetree

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -55,6 +55,7 @@ cask "discord"
 cask "diskwave"
 cask "docker"
 cask "fastlane"
+cask "fork"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
@@ -68,7 +69,6 @@ cask "kindle"
 cask "minikube"
 cask "ngrok"
 cask "postman"
-cask "sourcetree"
 cask "skype"
 cask "slack"
 cask "vagrant"
