--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask"
 tap "aws/tap"
 tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
+tap "mongodb/brew"
 tap "TylerBrock/saw"
 
 brew "amazon-ecs-cli"
@@ -29,6 +30,7 @@ brew "kubernetes-cli"
 brew "lazydocker"
 brew "mas"
 brew "maven"
+brew "mongodb-community"
 brew "node"
 brew "peco"
 brew "pipenv"
