:+1: Update: with commit template emoji

--- a/bin/git/config
+++ b/bin/git/config
@@ -1,3 +1,5 @@
+ln -f "${DOTFILES}/bin/git/.gitmessage.txt" "${HOME}/.gitmessage.txt"
+git config --global commit.template "${HOME}/.gitmessage.txt"
 git config --global push.default current
 git config --global url.ssh://git@github.com/.insteadOf https://github.com/
 git config --global user.name "${USER_NAME}"
