show success, for dbeaver, tmux

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -49,6 +49,7 @@ brew "yarn"
 brew "yq"
 
 cask "adobe-acrobat-reader"
+cask "adoptopenjdk"
 cask "alfred"
 cask "amazon-workspaces"
 cask "android-studio"
