--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask"
 tap "aws/tap"
 tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
+tap "hiroga-cc/hiroga-cc/virtualbox-5.2"
 tap "mongodb/brew"
 tap "TylerBrock/saw"
 
@@ -79,7 +80,7 @@ cask "postman"
 cask "skype"
 cask "slack"
 cask "vagrant"
-cask "virtualbox"
+cask "virtualbox-5.2"
 cask "visual-studio-code"
 cask "vlc"
 cask "wireshark"
