move words because default dictionary is there

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -73,4 +73,45 @@
         "yml"
     ],
     "vsicons.projectDetection.disableDetect": true,
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "python.jediEnabled": false,
+    "cSpell.userWords": [
+        "amazonaws",
+        "autopep",
+        "awslogs",
+        "bitbucket",
+        "boto",
+        "botocore",
+        "cidr",
+        "cloudformation",
+        "cloudfront",
+        "cloudwatch",
+        "cognitouserpool",
+        "docker",
+        "dynamodb",
+        "feacebook",
+        "filemaker",
+        "fqdn",
+        "hiroaki",
+        "mobileapi",
+        "mypage",
+        "mysql",
+        "ogasawara",
+        "openid",
+        "payjp",
+        "pyenv",
+        "rekognition",
+        "serverless",
+        "socialpool",
+        "sql",
+        "strftime",
+        "strptime",
+        "subnet",
+        "subnet",
+        "unittest",
+        "vpccidr",
+        "workspace",
+        "yyyymmdd"
+    ],
 }
