add correct words

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -96,11 +96,14 @@
         "hiroaki",
         "mobileapi",
         "mypage",
+        "mypy",
         "mysql",
         "ogasawara",
         "openid",
         "payjp",
+        "pipenv",
         "pyenv",
+        "pylint",
         "rekognition",
         "serverless",
         "socialpool",
