VSCode config with java programming

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -77,13 +77,16 @@
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "python.jediEnabled": false,
     "cSpell.userWords": [
+        "Intellij",
         "amazonaws",
         "autopep",
         "awslogs",
+        "awssdk",
         "bitbucket",
         "boto",
         "botocore",
         "cidr",
+        "classpath",
         "cloudformation",
         "cloudfront",
         "cloudwatch",
@@ -93,6 +96,7 @@
         "feacebook",
         "filemaker",
         "fqdn",
+        "gradlew",
         "hiroaki",
         "mobileapi",
         "mypage",
@@ -110,7 +114,6 @@
         "sql",
         "strftime",
         "strptime",
-        "subnet",
         "subnet",
         "unittest",
         "vpccidr",
