install stoplight-next

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/cask"
 tap "aws/tap"
 tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
+tap "hiroga-cc/homebrew-cask"
 tap "hiroga-cc/virtualbox-5.2"
 tap "mongodb/brew"
 tap "TylerBrock/saw"
@@ -15,6 +16,7 @@ brew "aws-session-manager-plugin"
 brew "bash-completion"
 brew "chamber"
 brew "circleci"
+brew "coreutils"
 brew "dep"
 brew "fish"
 brew "ghq"
@@ -80,6 +82,7 @@ cask "onedrive"
 cask "postman"
 cask "skype"
 cask "slack"
+cask "stoplight-next"
 cask "vagrant"
 cask "virtualbox-5.2"
 cask "visual-studio-code"
