--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -89,6 +89,7 @@ cask "vlc"
 cask "wireshark"
 
 mas "Cyberduck", id: 409222199
+mas "Hex Fiend", id: 1342896380
 mas "LINE", id: 539883307
 mas "Tweetdeck", id: 485812721
 mas "Xcode", id: 497799835
