--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -105,6 +105,7 @@
         "mysql",
         "ogasawara",
         "openid",
+        "openvpn",
         "payjp",
         "pipenv",
         "pyenv",
