with GNU utils, without g prefix

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -7,6 +7,16 @@ tap "hiroga-cc/homebrew-cask"
 tap "mongodb/brew"
 tap "TylerBrock/saw"
 
+brew "coreutils"
+brew "findutils"
+brew "gnu-tar"
+brew "gnu-sed"
+brew "gawk"
+brew "gnutls"
+brew "gnu-indent"
+brew "gnu-getopt"
+brew "grep"
+
 brew "amazon-ecs-cli"
 brew "aws-shell"
 brew "awscli"
@@ -15,7 +25,6 @@ brew "aws-session-manager-plugin"
 brew "bash-completion"
 brew "chamber"
 brew "circleci"
-brew "coreutils"
 brew "dep"
 brew "fish"
 brew "ghq"
