--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -20,6 +20,7 @@ brew "grep"
 brew "amazon-ecs-cli"
 brew "aws-shell"
 brew "awscli"
+brew "awslogs"
 brew "aws-sam-cli"
 brew "aws-session-manager-plugin"
 brew "bash-completion"
