issue with ghi / remove android-studio (alternative is jetbrains tools)

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -29,6 +29,7 @@ brew "chamber"
 brew "circleci"
 brew "dep"
 brew "fish"
+brew "ghi"
 brew "ghq"
 brew "gibo"
 brew "git"
@@ -67,7 +68,6 @@ cask "adobe-acrobat-reader"
 cask "adoptopenjdk"
 cask "alfred"
 cask "amazon-workspaces"
-cask "android-studio"
 cask "aws-vault"
 cask "dash"
 cask "dbeaver-community"
