--- a/bin/tmux/.tmux.conf
+++ b/bin/tmux/.tmux.conf
@@ -1,23 +1,27 @@
 
 # prefix key should be accessible and not be conflicted with `got to begginning of the line.`
 unbind C-b
-set -g prefix C-Space
-bind Space send-prefix
+set -g prefix C-s
+bind s send-prefix
 
 set -g default-terminal screen-256color
-
-
 set -g mouse on
 set -s set-clipboard on
 
 # disable "release mouse drag to copy and exit copy-mode", ref: https://github.com/tmux/tmux/issues/140
-unbind-key -T copy-mode-vi MouseDragEnd1Pane
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # since MouseDragEnd1Pane neither exit copy-mode nor clear selection now,
 # let single click do selection clearing for us.
-bind-key -T copy-mode-vi MouseDown1Pane select-pane\; send-keys -X clear-selection
+bind -T copy-mode-vi MouseDown1Pane select-pane\; send-keys -X clear-selection
 
 # this line changes the default binding of MouseDrag1Pane, the only difference
 # is that we use `copy-mode -eM` instead of `copy-mode -M`, so that WheelDownPane
 # can trigger copy-mode to exit when copy-mode is entered by MouseDrag1Pane
 bind -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -eM\" \"send-keys -M\"' 'copy-mode -eM'
+
+### Note
+# - set = set-option
+# - set -g(lobal) -a(ppend values to existing setting)
+# - bind = bind-key
+# - unbind = unbind-key
