--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,6 +5,7 @@ tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
 tap "hiroga-cc/homebrew-cask"
 tap "mongodb/brew"
+tap "octave-app/octave-app"
 tap "TylerBrock/saw"
 
 brew "coreutils"
@@ -49,6 +50,7 @@ brew "maven"
 brew "mongodb-community"
 brew "mysql"
 brew "node"
+brew "octave"
 brew "peco"
 brew "pipenv"
 brew "postgresql"
@@ -90,6 +92,7 @@ cask "keybase"
 cask "kindle"
 cask "minikube"
 cask "ngrok"
+cask "octave-app"
 cask "onedrive"
 cask "postman"
 cask "skype"
