--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -64,6 +64,7 @@ brew "tmux"
 brew "tree"
 brew "yarn"
 brew "yq"
+brew "zsh-syntax-highlighting"
 
 cask "adobe-acrobat-reader"
 cask "adoptopenjdk"
