--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -52,6 +52,9 @@ brew "node"
 brew "peco"
 brew "pipenv"
 brew "postgresql"
+# Linux ps command can not be imported to OSX, https://apple.stackexchange.com/questions/187783/can-i-use-gnu-ps-on-os-x
+brew "psgrep"
+brew "pstree"
 brew "pyenv"
 brew "redis"
 brew "ruby"
