clean up README

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -101,6 +101,7 @@
         "fqdn",
         "gradlew",
         "hiroaki",
+        "macos",
         "mobileapi",
         "mypage",
         "mypy",
