--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -24,6 +24,7 @@ brew "awscurl"
 brew "awslogs"
 brew "aws-sam-cli"
 brew "aws-session-manager-plugin"
+brew "bash"
 brew "bash-completion"
 brew "chamber"
 brew "circleci"
