remove octave because it takes too long time

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,7 +5,7 @@ tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
 tap "hiroga-cc/homebrew-cask"
 tap "mongodb/brew"
-tap "octave-app/octave-app"
+# tap "octave-app/octave-app"
 tap "TylerBrock/saw"
 
 brew "coreutils"
@@ -98,7 +98,7 @@ cask "keybase"
 cask "kindle"
 cask "minikube"
 cask "ngrok"
-cask "octave-app"
+# cask "octave-app"
 cask "onedrive"
 cask "postman"
 cask "skype"
