replace envs by anyenv

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -19,6 +19,7 @@ brew "gnu-getopt"
 brew "grep"
 
 brew "amazon-ecs-cli"
+brew "anyenv"
 brew "aws-shell"
 brew "awscli"
 brew "awscurl"
@@ -52,7 +53,6 @@ brew "maven"
 brew "mongodb-community"
 brew "mysql"
 brew "node"
-brew "nodenv"
 brew "octave"
 brew "peco"
 brew "pipenv"
@@ -60,10 +60,8 @@ brew "postgresql"
 # Linux ps command can not be imported to OSX, https://apple.stackexchange.com/questions/187783/can-i-use-gnu-ps-on-os-x
 brew "psgrep"
 brew "pstree"
-brew "pyenv"
 brew "redis"
 brew "ruby"
-brew "rbenv"
 brew "ruby-build"
 brew "saw"
 brew "telnet"
