--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -1,206 +1,201 @@
 {
-    "breadcrumbs.enabled": true, // パンくずリスト
-    "editor.renderWhitespace": "all",
+  "breadcrumbs.enabled": true, // パンくずリスト
+  "editor.renderWhitespace": "all",
+  "editor.formatOnSave": true,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "files.exclude": {
+    "**/.git": false
+  },
+  "git.autofetch": true,
+  "launch": {
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "type": "bashdb",
+        "request": "launch",
+        "name": "Bash-Debug (select script from list of sh files)",
+        "cwd": "${fileDirname}",
+        "program": "${file}",
+        "args": []
+      }
+    ]
+  },
+  "window.zoomLevel": 0,
+  "workbench.sideBar.location": "right",
+  // languages
+  "java.configuration.checkProjectSettingsExclusions": false,
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+  "javascript.updateImportsOnFileMove.enabled": "never",
+  "[typescript]": {
     "editor.formatOnSave": true,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
-    "files.exclude": {
-        "**/.git": false,
+    "editor.formatOnPaste": true
+  },
+  "[markdown]": {
+    "editor.formatOnSave": true,
+    "editor.wordWrap": "on",
+    "editor.acceptSuggestionOnEnter": "off"
+  },
+  "[python]": {
+    "editor.formatOnSave": true
+  },
+  // Python PEP8:
+  // E501: 80 characters are not too long in my environment.
+  "python.formatting.autopep8Args": ["--ignore=E501"],
+  "python.linting.pycodestyleArgs": ["--ignore=E501"],
+  "python.formatting.provider": "autopep8", // black is pre-release
+  // Python: Linting: Using pylint and flake8 both. Ther overlaped some but some does not.
+  // http://books.agiliq.com/projects/essential-python-tools/en/latest/linters.html
+  // https://www.reddit.com/r/Python/comments/82hgzm/any_advantages_of_flake8_over_pylint/
+  "python.linting.pylintEnabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.mypyEnabled": true,
+  // extensions
+  "cSpell.enabledLanguageIds": [
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "go",
+    "handlebars",
+    "html",
+    "jade",
+    "javascript",
+    "javascriptreact",
+    "json",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pub",
+    "python",
+    "restructuredtext",
+    "rust",
+    "scss",
+    "text",
+    "typescript",
+    "typescriptreact",
+    "yaml",
+    "yml"
+  ],
+  "vsicons.projectDetection.disableDetect": true,
+  "editor.suggestSelection": "first",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "python.jediEnabled": false,
+  "cSpell.userWords": [
+    "Cognito",
+    "Intellij",
+    "Tweetdeck",
+    "amazonaws",
+    "autopep",
+    "awscli",
+    "awslogs",
+    "awssdk",
+    "bitbucket",
+    "boto",
+    "botocore",
+    "cidr",
+    "classpath",
+    "cloudformation",
+    "cloudfront",
+    "cloudwatch",
+    "cognitouserpool",
+    "cyberduck",
+    "docker",
+    "dynamodb",
+    "feacebook",
+    "filemaker",
+    "fqdn",
+    "getopt",
+    "gradlew",
+    "hiroaki",
+    "macos",
+    "mkdir",
+    "mobileapi",
+    "mypage",
+    "mypy",
+    "mysql",
+    "oauth",
+    "ogasawara",
+    "openid",
+    "openvpn",
+    "payjp",
+    "peco",
+    "pipefail",
+    "pipenv",
+    "printf",
+    "pyenv",
+    "pylint",
+    "rekognition",
+    "serverless",
+    "socialpool",
+    "sql",
+    "strftime",
+    "strptime",
+    "subnet",
+    "unarchiver",
+    "unittest",
+    "vpccidr",
+    "workspace",
+    "xcode",
+    "yyyymmdd"
+  ],
+  "peacock.favoriteColors": [
+    {
+      "name": "Angular Red",
+      "value": "#b52e31"
     },
-    "git.autofetch": true,
-    "launch": {
-        "version": "0.2.0",
-        "configurations": [
-            {
-                "type": "bashdb",
-                "request": "launch",
-                "name": "Bash-Debug (select script from list of sh files)",
-                "cwd": "${fileDirname}",
-                "program": "${file}",
-                "args": []
-            }
-        ]
+    {
+      "name": "Auth0 Orange",
+      "value": "#eb5424"
     },
-    "window.zoomLevel": 0,
-    "workbench.sideBar.location": "right",
-    // languages
-    "java.configuration.checkProjectSettingsExclusions": false,
-    "[javascript]": {
-        "editor.formatOnSave": true
+    {
+      "name": "Azure Blue",
+      "value": "#007fff"
     },
-    "javascript.updateImportsOnFileMove.enabled": "never",
-    "[typescript]": {
-        "editor.formatOnSave": true,
-        "editor.formatOnPaste": true
+    {
+      "name": "C# Purple",
+      "value": "#68217A"
     },
-    "[markdown]": {
-        "editor.formatOnSave": true,
-        "editor.wordWrap": "on",
-        "editor.acceptSuggestionOnEnter": "off"
+    {
+      "name": "Gatsby Purple",
+      "value": "#639"
     },
-    "[python]": {
-        "editor.formatOnSave": true
+    {
+      "name": "Go Cyan",
+      "value": "#5dc9e2"
     },
-    // Python PEP8:
-    // E501: 80 characters are not too long in my environment.  
-    "python.formatting.autopep8Args": [
-        "--ignore=E501",
-    ],
-    "python.linting.pycodestyleArgs": [
-        "--ignore=E501",
-    ],
-    "python.formatting.provider": "autopep8", // black is pre-release
-    // Python: Linting: Using pylint and flake8 both. Ther overlaped some but some does not.
-    // http://books.agiliq.com/projects/essential-python-tools/en/latest/linters.html
-    // https://www.reddit.com/r/Python/comments/82hgzm/any_advantages_of_flake8_over_pylint/
-    "python.linting.pylintEnabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.mypyEnabled": true,
-    // extensions
-    "cSpell.enabledLanguageIds": [
-        "asciidoc",
-        "c",
-        "cpp",
-        "csharp",
-        "css",
-        "go",
-        "handlebars",
-        "html",
-        "jade",
-        "javascript",
-        "javascriptreact",
-        "json",
-        "latex",
-        "less",
-        "markdown",
-        "php",
-        "plaintext",
-        "pub",
-        "python",
-        "restructuredtext",
-        "rust",
-        "scss",
-        "text",
-        "typescript",
-        "typescriptreact",
-        "yaml",
-        "yml"
-    ],
-    "vsicons.projectDetection.disableDetect": true,
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "python.jediEnabled": false,
-    "cSpell.userWords": [
-        "Cognito",
-        "Intellij",
-        "Tweetdeck",
-        "amazonaws",
-        "autopep",
-        "awscli",
-        "awslogs",
-        "awssdk",
-        "bitbucket",
-        "boto",
-        "botocore",
-        "cidr",
-        "classpath",
-        "cloudformation",
-        "cloudfront",
-        "cloudwatch",
-        "cognitouserpool",
-        "cyberduck",
-        "docker",
-        "dynamodb",
-        "feacebook",
-        "filemaker",
-        "fqdn",
-        "getopt",
-        "gradlew",
-        "hiroaki",
-        "macos",
-        "mkdir",
-        "mobileapi",
-        "mypage",
-        "mypy",
-        "mysql",
-        "oauth",
-        "ogasawara",
-        "openid",
-        "openvpn",
-        "payjp",
-        "peco",
-        "pipefail",
-        "pipenv",
-        "printf",
-        "pyenv",
-        "pylint",
-        "rekognition",
-        "serverless",
-        "socialpool",
-        "sql",
-        "strftime",
-        "strptime",
-        "subnet",
-        "unarchiver",
-        "unittest",
-        "vpccidr",
-        "workspace",
-        "xcode",
-        "yyyymmdd"
-    ],
-    "peacock.favoriteColors": [
-        {
-            "name": "Angular Red",
-            "value": "#b52e31"
-        },
-        {
-            "name": "Auth0 Orange",
-            "value": "#eb5424"
-        },
-        {
-            "name": "Azure Blue",
-            "value": "#007fff"
-        },
-        {
-            "name": "C# Purple",
-            "value": "#68217A"
-        },
-        {
-            "name": "Gatsby Purple",
-            "value": "#639"
-        },
-        {
-            "name": "Go Cyan",
-            "value": "#5dc9e2"
-        },
-        {
-            "name": "Java Blue-Gray",
-            "value": "#557c9b"
-        },
-        {
-            "name": "JavaScript Yellow",
-            "value": "#f9e64f"
-        },
-        {
-            "name": "Mandalorian Blue",
-            "value": "#1857a4"
-        },
-        {
-            "name": "Node Green",
-            "value": "#215732"
-        },
-        {
-            "name": "React Blue",
-            "value": "#00b3e6"
-        },
-        {
-            "name": "Something Different",
-            "value": "#832561"
-        },
-        {
-            "name": "Vue Green",
-            "value": "#42b883"
-        }
-    ],
-    "aws.profile": "profile:default"
+    {
+      "name": "Java Blue-Gray",
+      "value": "#557c9b"
+    },
+    {
+      "name": "JavaScript Yellow",
+      "value": "#f9e64f"
+    },
+    {
+      "name": "Mandalorian Blue",
+      "value": "#1857a4"
+    },
+    {
+      "name": "Node Green",
+      "value": "#215732"
+    },
+    {
+      "name": "React Blue",
+      "value": "#00b3e6"
+    },
+    {
+      "name": "Something Different",
+      "value": "#832561"
+    },
+    {
+      "name": "Vue Green",
+      "value": "#42b883"
+    }
+  ]
 }
