words for berw and mongo gui

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -90,44 +90,72 @@
     "Cognito",
     "Intellij",
     "Tweetdeck",
+    "adoptopenjdk",
     "amazonaws",
+    "anyenv",
     "autopep",
     "awscli",
+    "awscurl",
     "awslogs",
     "awssdk",
     "bitbucket",
     "boto",
     "botocore",
     "cidr",
+    "circleci",
     "classpath",
     "cloudformation",
     "cloudfront",
     "cloudwatch",
     "cognitouserpool",
+    "coreutils",
     "cyberduck",
+    "dbeaver",
+    "diskwave",
     "docker",
     "dynamodb",
+    "fastlane",
     "feacebook",
     "filemaker",
+    "findutils",
     "fqdn",
     "getopt",
+    "gibo",
+    "gnupg",
+    "gnutls",
     "gradlew",
+    "graphviz",
+    "gyazo",
     "hiroaki",
+    "hiroga",
+    "inkdrop",
+    "jetbrains",
+    "keybase",
+    "kubernetes",
+    "lazydocker",
+    "lsof",
     "macos",
+    "minikube",
     "mkdir",
     "mobileapi",
+    "mongodb",
     "mypage",
     "mypy",
     "mysql",
+    "ngrok",
     "oauth",
     "ogasawara",
+    "onedrive",
     "openid",
     "openvpn",
     "payjp",
     "peco",
     "pipefail",
     "pipenv",
+    "postgresql",
     "printf",
+    "psgrep",
+    "pstree",
     "pyenv",
     "pylint",
     "rekognition",
@@ -137,9 +165,12 @@
     "strftime",
     "strptime",
     "subnet",
+    "tmux",
     "unarchiver",
     "unittest",
+    "virtualbox",
     "vpccidr",
+    "wireshark",
     "workspace",
     "xcode",
     "yyyymmdd"
