--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -97,6 +97,7 @@ cask "kap"
 cask "keybase"
 cask "kindle"
 cask "minikube"
+cask "mongodb-compass"
 cask "ngrok"
 # cask "octave-app"
 cask "onedrive"
