--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -93,6 +93,7 @@
     "adoptopenjdk",
     "amazonaws",
     "anyenv",
+    "appdir",
     "autopep",
     "awscli",
     "awscurl",
@@ -109,6 +110,7 @@
     "cloudwatch",
     "cognitouserpool",
     "coreutils",
+    "csvkit",
     "cyberduck",
     "dbeaver",
     "diskwave",
