--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -31,6 +31,7 @@ brew "bash"
 brew "bash-completion"
 brew "chamber"
 brew "circleci"
+brew "csvkit"
 brew "dep"
 brew "exa"
 brew "fish"
@@ -65,6 +66,7 @@ brew "redis"
 brew "ruby"
 brew "ruby-build"
 brew "saw"
+brew "shellcheck"
 brew "telnet"
 brew "terraform"
 brew "tmux"
