--- a/bin/git/.gitconfig
+++ b/bin/git/.gitconfig
@@ -8,5 +8,7 @@
 	root = ~/.ghq
 [push]
 	default = current
+[pull]
+	default = current
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
