yaml for cfn and dictionary

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -52,6 +52,28 @@
   "python.linting.pylintEnabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
+  "yaml.customTags": [
+    "!Ref",
+    "!Sub scalar",
+    "!Sub sequence",
+    "!Join sequence",
+    "!FindInMap sequence",
+    "!GetAtt scalar",
+    "!GetAtt sequence",
+    "!Base64 mapping",
+    "!GetAZs",
+    "!Select scalar",
+    "!Select sequence",
+    "!Split sequence",
+    "!ImportValue",
+    "!Condition",
+    "!Equals sequence",
+    "!And",
+    "!If",
+    "!Not",
+    "!Or"
+  ],
+  "yaml.format.proseWrap": "always",
   // extensions
   "cSpell.enabledLanguageIds": [
     "asciidoc",
@@ -116,6 +138,7 @@
     "diskwave",
     "docker",
     "dynamodb",
+    "eval",
     "fastlane",
     "feacebook",
     "filemaker",
@@ -170,6 +193,7 @@
     "tmux",
     "unarchiver",
     "unittest",
+    "userpool",
     "virtualbox",
     "vpccidr",
     "wireshark",
