to learn minikube

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -138,6 +138,7 @@
     "diskwave",
     "docker",
     "dynamodb",
+    "eksctl",
     "eval",
     "fastlane",
     "feacebook",
@@ -185,6 +186,7 @@
     "pylint",
     "rekognition",
     "serverless",
+    "shellcheck",
     "socialpool",
     "sql",
     "strftime",
@@ -196,6 +198,7 @@
     "userpool",
     "virtualbox",
     "vpccidr",
+    "weaveworks",
     "wireshark",
     "workspace",
     "xcode",
