--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -7,6 +7,7 @@ tap "hiroga-cc/homebrew-cask"
 tap "mongodb/brew"
 # tap "octave-app/octave-app"
 tap "TylerBrock/saw"
+tap "weaveworks/tap"
 
 brew "coreutils"
 brew "findutils"
@@ -53,6 +54,7 @@ brew "kubernetes-cli"
 brew "lazydocker"
 brew "mas"
 brew "maven"
+brew "minikube"
 brew "mongodb-community"
 brew "mysql"
 brew "node"
@@ -72,6 +74,7 @@ brew "telnet"
 brew "terraform"
 brew "tmux"
 brew "tree"
+brew "weaveworks/tap/eksctl"
 brew "yarn"
 brew "yq"
 brew "zsh-syntax-highlighting"
