--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -93,6 +93,7 @@ cask "google-cloud-sdk"
 cask "google-drive-file-stream"
 cask "google-japanese-ime"
 cask "gyazo"
+cask "imageoptim"
 cask "inkdrop"
 cask "java"
 cask "jetbrains-toolbox"
