--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -110,6 +110,7 @@
   "python.jediEnabled": false,
   "cSpell.userWords": [
     "Cognito",
+    "Hostnames",
     "Intellij",
     "Tweetdeck",
     "adoptopenjdk",
