--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -109,12 +109,16 @@
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "python.jediEnabled": false,
   "cSpell.userWords": [
+    "Arns",
     "Cognito",
+    "Elgato",
     "Hostnames",
     "Intellij",
+    "Redash",
     "Tweetdeck",
     "adoptopenjdk",
     "amazonaws",
+    "amzn",
     "anyenv",
     "appdir",
     "autopep",
@@ -133,6 +137,7 @@
     "cloudwatch",
     "cognitouserpool",
     "coreutils",
+    "creditcard",
     "csvkit",
     "cyberduck",
     "dbeaver",
