--- a/macos-home/Brewfile
+++ b/macos-home/Brewfile
@@ -1,1 +1,35 @@
+tap "homebrew/cask"
+
 cask "folding-at-home"
+brew "bash"
+brew "bash-completion"
+brew "exa"
+brew "ghi"
+brew "ghq"
+brew "git"
+brew "hub"
+brew "mas"
+brew "tmux"
+brew "zsh-syntax-highlighting"
+
+cask "adobe-acrobat-reader"
+cask "alfred"
+cask "discord"
+cask "diskwave"
+cask "docker"
+cask "google-chrome"
+cask "google-drive-file-stream"
+cask "google-japanese-ime"
+cask "gyazo"
+cask "imageoptim"
+cask "inkdrop"
+cask "keybase"
+cask "kindle"
+cask "onedrive"
+cask "slack"
+cask "visual-studio-code"
+
+mas "Bandwidth+", id: 490461369
+mas "LINE", id: 539883307
+mas "The Unarchiver", id: 425424353
+mas "Tweetdeck", id: 485812721
