--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -74,7 +74,6 @@ brew "telnet"
 brew "terraform"
 brew "tmux"
 brew "tree"
-brew "unity-hub"
 brew "weaveworks/tap/eksctl"
 brew "yarn"
 brew "yq"
@@ -113,6 +112,7 @@ cask "postman"
 cask "skype"
 cask "slack"
 cask "stoplight-next"
+cask "unity-hub"
 cask "vagrant"
 cask "virtualbox-5.2"
 cask "visual-studio-code"
