--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -1,6 +1,7 @@
 cask_args appdir: "/Applications"
 tap "homebrew/cask"
 tap "aws/tap"
+tap "graalvm/tap"
 tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
 tap "hiroga-cc/homebrew-cask"
@@ -95,6 +96,7 @@ cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
 cask "google-japanese-ime"
+cask "graalvm-ce-java8"
 cask "gyazo"
 cask "imageoptim"
 cask "inkdrop"
