--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -81,6 +81,7 @@ brew "yq"
 brew "zsh-syntax-highlighting"
 
 cask "adobe-acrobat-reader"
+cask "adobe-creative-cloud"
 cask "adoptopenjdk"
 cask "alfred"
 cask "amazon-workspaces"
