--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -4,7 +4,7 @@ tap "aws/tap"
 tap "graalvm/tap"
 tap "heroku/brew"
 tap "hiroga-cc/aws-session-manager-plugin"
-tap "hiroga-cc/homebrew-cask"
+tap "hiroga-cc/tap"
 tap "mongodb/brew"
 # tap "octave-app/octave-app"
 tap "TylerBrock/saw"
