--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -104,6 +104,7 @@ cask "jetbrains-toolbox"
 cask "kap"
 cask "keybase"
 cask "kindle"
+cask "karabiner-elements"
 cask "minikube"
 cask "mongodb-compass"
 cask "ngrok"
