--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -56,6 +56,7 @@ brew "mas"
 brew "maven"
 brew "minikube"
 brew "mongodb-community"
+brew "mongodb-database-tools"
 brew "mysql"
 brew "node"
 brew "octave"
