use latest graalvm

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -127,6 +127,8 @@
     "Elgato",
     "Hostnames",
     "Intellij",
+    "Mandalorian",
+    "PGPASSWORD",
     "Redash",
     "Tweetdeck",
     "Unblended",
@@ -185,7 +187,9 @@
     "gyazo",
     "hiroaki",
     "hiroga",
+    "hoken",
     "imageoptim",
+    "imei",
     "inkdrop",
     "jetbrains",
     "junit",
@@ -221,6 +225,7 @@
     "postgresql",
     "printf",
     "psgrep",
+    "psql",
     "pstree",
     "pyenv",
     "pylint",
@@ -251,6 +256,7 @@
     "wakatime",
     "weaveworks",
     "webhook",
+    "willmail",
     "wireshark",
     "workspace",
     "xcode",
