--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -155,6 +155,7 @@
     "cloudformation",
     "cloudfront",
     "cloudwatch",
+    "cocoapods",
     "codebuild",
     "cognitouserpool",
     "cookiecutter",
