--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -85,6 +85,7 @@ cask "adobe-creative-cloud"
 cask "adoptopenjdk"
 cask "alfred"
 cask "aws-vault"
+cask "cocoapods"
 cask "dash"
 # cask "dbeaver-community" # has invocation problem at 2020-04-14 now. please install from https://dbeaver.io/download/
 cask "deepl"
@@ -93,6 +94,7 @@ cask "diskwave"
 cask "docker"
 cask "fastlane"
 cask "fork"
+cask "git-lfs"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
