--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -226,6 +226,7 @@
     "pylint",
     "redhat",
     "rekognition",
+    "resolv",
     "secretsmanager",
     "serverless",
     "shellcheck",
@@ -241,6 +242,7 @@
     "untap",
     "upsert",
     "userpool",
+    "videoinput",
     "virtualbox",
     "vpccidr",
     "vscodeintellicode",
