--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -40,6 +40,7 @@ brew "ghi"
 brew "ghq"
 brew "gibo"
 brew "git"
+brew "git-lfs"
 brew "go"
 brew "gradle"
 brew "graphviz"
@@ -94,7 +95,6 @@ cask "diskwave"
 cask "docker"
 cask "fastlane"
 cask "fork"
-cask "git-lfs"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive-file-stream"
