with Microsoft office

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -130,6 +130,9 @@ mas "Bandwidth+", id: 490461369
 mas "Cyberduck", id: 409222199
 mas "Hex Fiend", id: 1342896380
 mas "LINE", id: 539883307
+mas "Microsoft Excel", id: 462058435
+mas "Microsoft PowerPoint", id: 462062816
+mas "Microsoft Word", id: 462054704
 mas "The Unarchiver", id: 425424353
 mas "Tweetdeck", id: 485812721
 mas "Xcode", id: 497799835
