2020-09-05 remove minikube and I know Vercel

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -132,6 +132,7 @@
     "Redash",
     "Tweetdeck",
     "Unblended",
+    "Vercel",
     "adoptopenjdk",
     "amazonaws",
     "amzn",
@@ -216,6 +217,7 @@
     "oauth",
     "ogasawara",
     "onedrive",
+    "onicecandidate",
     "openid",
     "openvpn",
     "passthrough",
@@ -259,6 +261,7 @@
     "wakatime",
     "weaveworks",
     "webhook",
+    "webrtc",
     "willmail",
     "wireshark",
     "workspace",
