--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -147,6 +147,7 @@
     "awslogs",
     "awssdk",
     "bitbucket",
+    "blankline",
     "boto",
     "botocore",
     "chmod",
@@ -214,6 +215,7 @@
     "mypy",
     "mysql",
     "ngrok",
+    "nombre",
     "oauth",
     "ogasawara",
     "onedrive",
