hello gh, good by ghi & hub

--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -36,7 +36,7 @@ brew "cookiecutter"
 brew "csvkit"
 brew "dep"
 brew "exa"
-brew "ghi"
+brew "gh"
 brew "ghq"
 brew "gibo"
 brew "git"
@@ -48,7 +48,6 @@ brew "gnupg"
 brew "haskell-stack"
 brew "helm"
 brew "heroku"
-brew "hub"
 brew "jq"
 brew "kotlin"
 brew "kubernetes-cli"
