--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -105,6 +105,7 @@
     "json",
     "latex",
     "less",
+    "makefile",
     "markdown",
     "php",
     "plaintext",
@@ -215,6 +216,7 @@
     "mobileapi",
     "mobx",
     "mongodb",
+    "mrjob",
     "mypage",
     "mypy",
     "mysql",
