install for scraping

--- a/bin/vscode/User/settings.json
+++ b/bin/vscode/User/settings.json
@@ -155,6 +155,7 @@
     "boto",
     "botocore",
     "chmod",
+    "chromedriver",
     "cidr",
     "circleci",
     "classpath",
@@ -169,6 +170,7 @@
     "creditcard",
     "csvkit",
     "cyberduck",
+    "datalake",
     "dbeaver",
     "deepl",
     "diskwave",
