--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -32,6 +32,7 @@ brew "aws-session-manager-plugin"
 brew "bash"
 brew "bash-completion"
 brew "chamber"
+brew "chromedriver"
 brew "circleci"
 brew "cookiecutter"
 brew "csvkit"
