--- a/macos-dev/Brewfile
+++ b/macos-dev/Brewfile
@@ -67,6 +67,7 @@ brew "postgresql"
 # Linux ps command can not be imported to OSX, https://apple.stackexchange.com/questions/187783/can-i-use-gnu-ps-on-os-x
 brew "psgrep"
 brew "pstree"
+brew "python3"  # for AWS tools and VSCode
 brew "redis"
 brew "ruby"
 brew "ruby-build"
